--- a/build.gradle
+++ b/build.gradle
@@ -3,4 +3,5 @@ plugins {
     id 'fabric-loom' version '1.7-SNAPSHOT' apply false
     // see https://projects.neoforged.net/neoforged/moddevgradle for new versions
     id 'net.neoforged.moddev' version '2.0.28-beta' apply false
+    id "com.modrinth.minotaur" version "2.+" apply false
 }
